--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shakil Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;1,400&display=swap"
+        rel="stylesheet">
+    <title>Shakil Sarder Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="box1">
+            <h1>Welcome To</h1>
+            <h1> <span class="color-name">Shakil Sarder</span> World</h1>
+            <h2>Build Climber and Train Stopper</h2>
+            <p>
+                You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. Work Hard | Stay humble | Make things
+                happen | Do Programming| Dream to work at Google.
+            </p>
+
+            <a class="hire-me-button" target="blank" href="https://www.linkedin.com/in/shakilsarder1997/">Hire Me</a>
+
+
+        </div>
+        <div class="box1">
+            <img src="resource/my-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
