--- a/index.html
+++ b/index.html
@@ -26,13 +26,31 @@
                 happen | Do Programming| Dream to work at Google.
             </p>
 
-            <a class="hire-me-button" target="blank" href="https://www.linkedin.com/in/shakilsarder1997/">Hire Me</a>
+            <a class="hire-me-button" target="_blank" href="https://www.linkedin.com/in/shakilsarder1997/">Hire Me</a>
 
 
         </div>
         <div class="box1">
             <img src="resource/my-bg.png" alt="">
         </div>
+
+    </section>
+
+    <section class="secend-banner">
+        <div class="box1">
+            <img src="resource/my-bg2.png" alt="">
+        </div>
+        <div class="box1">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="download-button" target="_blank"
+                href="https://drive.google.com/drive/folders/1TAesFXYm6eXU-MLRTVFg5SnShUCB1Zn6">Download
+                Resume</a>
+        </div>
+
+
     </section>
 </body>
 
