--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexable-container">
         <div class="box1">
             <h1>Welcome To</h1>
             <h1> <span class="color-name">Shakil Sarder</span> World</h1>
@@ -36,22 +36,49 @@
 
     </section>
 
-    <section class="secend-banner">
+    <section class="secend-banner flexable-container">
         <div class="box1">
             <img src="resource/my-bg2.png" alt="">
         </div>
         <div class="box1">
             <h1>Dream Big</h1>
             <h2>Become a web developer</h2>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+            <p id="dream-text">I already learned the basic HTML and CSS. I can build any simple website. I can even
+                teach my grandma
                 how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="download-button" target="_blank"
                 href="https://drive.google.com/drive/folders/1TAesFXYm6eXU-MLRTVFg5SnShUCB1Zn6">Download
                 Resume</a>
         </div>
-
+    </section>
+    <section class="experience">
+        <h1>Experience</h1>
+        <div class="flexable-container">
+            <div id="exp1" class="exp-box">
+                <h2>Full Stack Web Developer</h2>
+                <h3> <span class="color-name">2021-Present | Pro Level Developer</span> </h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div id="exp2" class="exp-box">
+                <h2>Junior JS Developer</h2>
+                <h3> <span class="color-name">2020-2021 | Programming Hero Learner</span> </h3>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
 
     </section>
+    <footer>
+        <p>© Shakil Sarder 2022,All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
